Fix collapse header alignment

--- a/src/components/collapse/Collapse.scss
+++ b/src/components/collapse/Collapse.scss
@@ -17,6 +17,7 @@
   color: var(--color-coat-of-arms-blue);
   font-size: var(--fontsize-heading-m);
   margin-bottom: var(--spacing-s);
+  margin-top: var(--spacing-s);
 }
 
 .collapse-button-icon {
